# santaparavia-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle.kts
src/: ncurses-screen.cpp  ncurses-screen.h  paravia.cpp  paravia.h  player.cpp  player.h  typedefs.h
src/main/cpp/: main.cpp  paravia.cpp
src/main/headers/: ncurses-screen.h  paravia.h  player.h  typedefs.h
